--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -209,14 +209,15 @@ select.graySelect{
 	cursor: pointer;
 }
 .main-nav button.btn_SaveAndGo{
-	background:url(img/btn_saveAndGo.png)no-repeat;
-	width: 117px;
-	height:30px;
+	background:url(img/btnSaveGo.png)no-repeat;
+	width: 119px;
+	height:32px;
 	border:0;
 	font-size:11px;
 	color:#FFF;
-	text-indent:-9999px;
 	cursor: pointer;
+	box-shadow: none;
+	padding-right:30px;
 }
 .main-nav button.btn_External{
 	background:url(img/btn_External.png)no-repeat;
@@ -231,7 +232,7 @@ select.graySelect{
 	clear:both;
 	width:100%;
 	min-height:500px;
-	/*padding: 0 0 0 10px;*/
+	padding: 0 0 0 10px;
 	margin-bottom:20px;
 }
 .themes-board{
@@ -395,3 +396,4 @@ span.select {
 	background:url(img/bg_TimePicker.png) no-repeat right top #FFF;
 }
 .track { background:#999999; height: 100%; width:12px; position: relative; padding: 0 1px;border-right: 1px solid #333333; border-left: 1px solid #999999;}
+.userSearch span.checkbox{float:none}
